<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11"
    android:background="@drawable/bground_setting">

    <TextView
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <TextView
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="40dp"
        android:text="@string/setting"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLed1"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/old"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btnOptionAdd"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLed2"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/young"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btnOptionMinus"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/minus"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLed3"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/children"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btnOptionStop"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/stop"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnOption"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/options"
                android:textColor="#ffffff" />
            <Button
                android:id="@+id/btnReturn"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/return_"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>