<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@drawable/bground_massge">

    <TextView
        android:gravity="center"
        android:layout_weight="0"
        android:text="@string/massage"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnConnect"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLed1"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/high"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:id="@+id/btnLed2"
            android:text="@string/average"
            android:layout_width="260dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:id="@+id/btnLed3"
            android:layout_width="260dp"
            android:layout_height="match_parent"
            android:text="@string/low"/>
    </LinearLayout>
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>